# lakritsa_crypto_tracker

./: .gitignore  Dockerfile  Dockerfile.crypto_watcher  Dockerfile.marketplace_monitor  README.md  currency_data.csv  docker-compose.yml  pyproject.toml  tortoise_config.toml
crypto_watcher/: api_client.py  db_operations.py  email_client.py  main.py  models.py  monitor.py  utils.py
marketplace_monitor/: main.py  models.py  notifications.py  settings.py  spiders.py  utils.py
